# SDL_gpu_demos

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  shaders.sh
imgui/: grass.ini  pbr.ini
resources/models/: single_grass_blade.glb
resources/models/CompareNormal/: CompareNormalWithTangents.glb
resources/models/DamagedHelmet/: DamagedHelmetWithTangents.glb
resources/shaders/src/: frag.frag  scene_data.glsl  vert.vert
resources/textures/helipad/: diffuse.ktx2  specular.ktx2
resources/textures/plains_sunset/: plains_sunset_4k.hdr  plains_sunset_GGX.ktx2  plains_sunset_diffuse.ktx2
src/: camera.cpp  cube.cpp  cube.h  gltf_loader.cpp  gltf_loader.h  gltf_material.cpp  gltf_material.h  gltf_scene.cpp  gltf_scene.h  logger.cpp  main.cpp  material.h  pch.h  rendersystem.cpp  rendersystem.h  scene_picker.cpp  scene_picker.h  skybox.cpp  tangent_loader.cpp  tangent_loader.h  transform.cpp  ubo.h  util.cpp  util.h
src/apps/grass/: grass.cpp  grass.h
src/apps/pbr/: pbr_app.cpp  pbr_app.h
src/apps/ssbo_demo/: ssbo_demo.cpp  ssbo_demo.h
src/common/: camera.cpp  camera.h  compute_pipeline_builder.cpp  compute_pipeline_builder.h  cubemap.cpp  cubemap.h  engine.cpp  engine.h  gltf_loader.cpp  gltf_loader.h  gltf_material.cpp  gltf_material.h  gltf_scene.cpp  gltf_scene.h  grid.cpp  grid.h  loaded_image.cpp  loaded_image.h  logger.cpp  logger.h  material.h  pipeline_builder.cpp  pipeline_builder.h  program.h  rendersystem.cpp  rendersystem.h  scene_picker.cpp  scene_picker.h  skybox.cpp  skybox.h  tangent_loader.cpp  tangent_loader.h  transform.cpp  types.h  ubo.h  unit_cube.h  util.cpp  util.h
src/shaders/: camera_binding.glsl  color.frag  cubemap_projection.frag  cubemap_projection.vert  cull_chunks.comp  cull_chunks_settings.h  debug_flags.h  fog.glsl  fog_settings.h  frag.frag  generate_grass.comp  grass.frag  grass.vert  grass_gen.h  grass_instance.glsl  grid.frag  grid.vert  material_features.h  pbr.frag  pbr.vert  pbr_flags.h  pbr_util.glsl  post_process.comp  post_process_flags.h  scene_data.glsl  skybox.vert  skybox_hdr.frag  ssbo.vert  terrain.frag  terrain.vert  terrain_chunk_instance.glsl  vert.vert
tests/: CMakeLists.txt  pipeline_builder_test.cpp
